Mejora en los botones

--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
 
     <div id="inicio">
       <div>
-        <button class="btn-iniciar" id="iniciar-juego">Iniciar juego</button>
+        <button class="btn-iniciar" id="iniciar-juego">JUGAR</button>
       </div>
       <div>
-        <button class="btn" id="nueva-palabra" style="width: 17.5rem;">Agregar palabra</button> 
+        <button class="btn" id="nueva-palabra" style="width: 17.5rem;">Nueva palabra</button> 
       </div>
     </div>
 
@@ -34,7 +34,7 @@
       </div>
       <div>
         <div class="info">
-          <p>👉 Máx. de 8 letras, SIN espacios</p>
+          <p>👉 Máximo 8 letras</p>
         </div>
         <div>
           <button class="btn btn-bg" style="width: 20.75rem; margin: 1rem;" id="guardar">Guardar y empezar</button>
@@ -91,13 +91,13 @@
       </div>
 
       <div>
-        <button class="btn btn-bg" style="width: 20.75rem; margin: 1rem;" id="nuevoJuego">Nuevo juego</button>
+        <button class="btn btn-bg" style="width: 20.75rem; margin: 1rem;" id="nuevoJuego">Volver a jugar</button>
 
       </div> 
     </div>
 
     <footer>
-      <p>Todos los derechos reservados | © Christian Tito | 2022</p>
+      <p>Estudiante de ONE ORACLE - ALURA | Christian Tito</p>
     </footer>
     <!-- JAVASCRIPT -->
     <script type="text/javascript" src="canvas.js"></script>
