--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
       </div>
 
       <div>
-        <button class="btn btn-bg" style="width: 20.75rem; margin: 1rem;" id="nuevoJuego">Volver al juego</button>
+        <button class="btn btn-bg" style="width: 20.75rem; margin: 1rem;" id="nuevoJuego">Volver a jugar</button>
 
       </div> 
     </div>
