Actualización de lista y errores corregidos

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <div id="agregar-palabra" class="display-none">
       <div class="input">
-        <input class="text-input" type="text" id="input-nueva-palabra" placeholder="Ingrese una palabra" maxlength="8">
+        <input class="text-input" type="text" id="input-nueva-palabra" placeholder="Escriba una palabra aquí" maxlength="8">
       </div>
       <div>
         <div class="info">
@@ -97,7 +97,7 @@
     </div>
 
     <footer>
-      <p>Estudiante de ONE ORACLE - ALURA | Christian Tito</p>
+      <p>Estudiante de ORACLE ONE - ALURA | Christian Tito</p>
     </footer>
     <!-- JAVASCRIPT -->
     <script type="text/javascript" src="canvas.js"></script>
